<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComicBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_draw">Layout Drawing</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_main">Hello World Immersion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_volumes">Volumes</string>
    <string name="cancel">Cancel</string>
    <string name="title_pages">Pages</string>
    <string name="title_presets">Presets</string>
    <string name="title_settings">Settings</string>
    <string name="navigation_back">Back action</string>
    <string name="action_example">Example action</string>
    <string name="settings">All settings go here</string>
    <string name="visibility">Ink Visibility</string>
    <string name="margin">Margin</string>
    <string name="padding">Padding</string>
    <string name="no_undo">Nothing to undo</string>
    <string name="no_redo">Nothing to redo</string>
    <string name="add_project">Add New Project</string>
    <string name="done">Done</string>
    <string name="new_project">New Project</string>
    <string name="new_project_name">Project title</string>
    <string name="new_project_vol_name">First volume title</string>
    <string name="new_vol_name">Volume title</string>
    <string name="add_new_volume">Add new volume</string>
    <string name="add_button">Add</string>
    <string name="delete">Delete</string>


</resources>
